--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     ],
     "require": {
         "squizlabs/php_codesniffer": "^3.6",
-        "friendsofphp/php-cs-fixer": "^3.0"
+        "friendsofphp/php-cs-fixer": "^3.0",
+      "ext-pdo": "*"
     },
     "description": "",
     "autoload": {
