--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require": {
         "squizlabs/php_codesniffer": "^3.6",
         "friendsofphp/php-cs-fixer": "^3.0",
-      "ext-pdo": "*"
+      "ext-pdo": "*",
+      "ext-json": "*"
     },
     "description": "",
     "autoload": {
