--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,20 @@
         }
     ],
     "require": {
+        "nikic/fast-route": "^1.3",
+        "paragonie/easydb": "^2",
+        "vlucas/phpdotenv": "^5.3",
         "squizlabs/php_codesniffer": "^3.6",
         "friendsofphp/php-cs-fixer": "^3.0",
       "ext-pdo": "*",
-      "ext-json": "*"
+      "ext-json": "*",
+        "codeception/module-rest": "^1.3"
+    },
+    "require-dev": {
+        "codeception/codeception": "^4.1",
+        "codeception/module-phpbrowser": "^1.0.0",
+        "codeception/module-asserts": "^1.0.0",
+        "codeception/module-db": "^1.1"
     },
     "description": "",
     "autoload": {
